@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
left to right direction

package Core{

package Controllers{
class "SendReportController" as SRC {
+getAllTestWithResultCovidPositive(dateToSee, histPoints)
+SimpleLinearRegression(userInteraction, sigLevel, confLevel, hypTest)
+MultilinearRegression(sigLevel, confLevel)
+sendNHSReport()
}
}

package Domain{
class "Company" as C {
-designation
+TestStore getTestStore()
+NHSReport generateNHSReport(sigLevel, confLevel, hypTest)
+NHSReport generateNHSReport(sigLevel, confLevel)
}

class "NHSReport" as NHSR {
+NHSReport(sigLevel, confLevel, hypTest)
+NHSReport(sigLevel, confLevel)
+String calculateData(arrayX, arrayY, lstDateExceptSundays)
+String calculateData(BiarrayX, arrayY, lstDateExceptSundays)
}

class "Report2NHS" as R2NHS {
+writeUsingFileWriter(data)
}

class "LinearRegression" as LR {
+LinearRegression (arrayX, arrayY)
}

class "MultilinearRegression" as MLR {
+MultilinearRegression (BiarrayX, arrayY)
}

}

package Stores{

class "TestStore" as TS {
+List<Test> getAllTestWithResultCovidPositive(date)
+double[] getDailyPositiveTests(lstAllTestWithResultCovidPositive)
+int getDailyPerformedTest(date)
+List <Test> getAllTestWithResultCovid(date)
+double[] getMeanAgeFromList(lstAllTestWithResultCovid)
+double[][] createBiarrayX (dailyNumberTests, meanAge)
}
}
}

package UI{
class "SendReportUI" as SRUI

class "Utils" as U {
+List<Date> getDaysWithoutSundays(dateToSee, histPoints)
}
}

SRUI ..> SRC
SRC ..> U
SRC ..> C
SRC ..> TS
SRC ..> NHSR
NHSR ..> LR
NHSR ..> MLR
SRC ..> R2NHS
NHSR "1..*" -- "1" C : < generates

@enduml